Closed
Bug 691377
Opened 14 years ago
Closed 14 years ago
crash [@ mozilla::net::CameraStreamImpl::transmitFrame]
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox8 unaffected, firefox9 fixed, firefox10 fixed)
VERIFIED
FIXED
Firefox 10
| Tracking | Status | |
|---|---|---|
| firefox8 | --- | unaffected |
| firefox9 | --- | fixed |
| firefox10 | --- | fixed |
People
(Reporter: steffen.wilberg, Assigned: fabrice)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
702 bytes,
patch
|
blassey
:
review+
asa
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
https://crash-stats.mozilla.com/report/index/bp-81e1a4ca-d1a3-48bf-b516-4761a2111003
I tried the camera capture demo on http://people.mozilla.org/~fdesre/capture/ with my Samsung Galaxy S (running a leaked build of Android 2.3.4), running the latest Nightly.
Clicking the "capture" button on that site works, it displays a black "Media Upload" box with the live camera preview. But clicking "OK" there crashes Fennec every time.
From Socorro :
https://crash-stats.mozilla.com/report/index/dd022b3d-10de-438b-9ec1-89c182111003
Crashing Thread:
Frame Module Signature [Expand] Source
0 libxul.so mozilla::net::CameraStreamImpl::transmitFrame netwerk/protocol/device/CameraStreamImpl.cpp:75
1 libxul.so Java_org_mozilla_gecko_GeckoAppShell_cameraCallbackBridge netwerk/protocol/device/CameraStreamImpl.cpp:56
2 libmozutils.so Java_org_mozilla_gecko_GeckoAppShell_cameraCallbackBridge other-licenses/android/APKOpen.cpp:243
3 libdvm.so dvmPlatformInvoke
4 libdvm.so dvmCallJNIMethod_general
5 dalvik-jit-code-cache (deleted) dalvik-jit-code-cache @0x23f
6 libdvm.so dexDataMapAlloc
7 libdvm.so dvmMterpStd
8 libdvm.so dvmInterpret
9 libdvm.so dvmInvokeMethod
10 libdvm.so dvmFreeDexOrJar
11 libdvm.so dvmAsmSisterStart
12 libdvm.so dvmMterpStd
13 libdvm.so dvmInterpret
14 libdvm.so dvmCallMethodV
15 libdvm.so JNI_CreateJavaVM
16 libandroid_runtime.so libandroid_runtime.so@0x38b28
17 libandroid_runtime.so libandroid_runtime.so@0x3a516
18 dalvik-LinearAlloc (deleted) dalvik-LinearAlloc @0x72007
19 dalvik-heap (deleted) dalvik-heap @0x404ff
20 libcutils.so property_get
21 libcutils.so set_process_name
22 app_process app_process@0xccc
23 app_process app_process@0x1027
24 libandroid_runtime.so libandroid_runtime.so@0xb8767
25 app_process app_process@0xb33
26 app_process app_process@0xb33
27 libc.so __libc_init
28 @0xffffffe3
29 app_process app_process@0x33
30 app_process app_process@0xb1f
Updated•14 years ago
|
Summary: crash mozilla::net::CameraStreamImpl::transmitFrame → crash [@ mozilla::net::CameraStreamImpl::transmitFrame]
Updated•14 years ago
|
Assignee: nobody → fabrice
| Assignee | ||
Comment 2•14 years ago
|
||
On some devices, the frame callback gets called one more time asynchronously just after we close the camera.
Attachment #564610 -
Flags: review?(blassey.bugs)
Updated•14 years ago
|
Attachment #564610 -
Flags: review?(blassey.bugs) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
| Assignee | ||
Comment 4•14 years ago
|
||
Comment on attachment 564610 [details] [diff] [review]
fix
Asking approval for Aurora, since it fixes a crash with no risk.
Attachment #564610 -
Flags: approval-mozilla-aurora?
Updated•14 years ago
|
tracking-fennec: --- → ?
status-firefox10:
--- → fixed
status-firefox8:
--- → unaffected
status-firefox9:
--- → affected
Target Milestone: --- → Firefox 10
Version: Trunk → Firefox 9
Comment 5•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Attachment #564610 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 6•14 years ago
|
||
pushed to aurora:
https://hg.mozilla.org/releases/mozilla-aurora/rev/910f9161b314
Comment 7•14 years ago
|
||
Verified fixed on:
Mozilla/5.0 (Android;Linux armv7l;rv:10.0)Gecko/20111228
Firefox/10.0 Fennec/10.0
Devices: Samsung Galaxy S
OS: Android 2.2
Status: RESOLVED → VERIFIED
Updated•12 years ago
|
tracking-fennec: ? → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•