Bug 691377 - crash [@ mozilla::net::CameraStreamImpl::transmitFrame] [r=blassey]